# ChangeLog for dev-libs/mpc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpc/ChangeLog,v 1.59 2015/05/11 19:36:46 zlogene Exp $

  11 May 2015; Mikle Kolyada <zlogene@gentoo.org> mpc-1.0.2-r1.ebuild:
  sparc stable wrt bug #531742

  26 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> mpc-1.0.2-r1.ebuild:
  ia64 stable wrt bug #531742

  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> mpc-1.0.2-r1.ebuild:
  x86 stable wrt bug #531742

  26 Apr 2015; Jeroen Roovers <jer@gentoo.org> mpc-1.0.2-r1.ebuild:
  Stable for PPC64 (bug #531742).

  12 Mar 2015; Jeroen Roovers <jer@gentoo.org> mpc-1.0.2-r1.ebuild:
  Stable for HPPA (bug #531742).

  03 Mar 2015; Markus Meier <maekke@gentoo.org> mpc-1.0.2-r1.ebuild:
  arm stable, bug #531742

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> mpc-1.0.2-r1.ebuild:
  Stable for ppc, wrt bug #531742

*mpc-1.0.3 (21 Feb 2015)

  21 Feb 2015; Anthony G. Basile <blueness@gentoo.org> +mpc-1.0.3.ebuild:
  Version bump

*mpc-1.0.2-r1 (01 Nov 2014)

  01 Nov 2014; Mike Frysinger <vapier@gentoo.org> +mpc-1.0.2-r1.ebuild:
  Add multilib support #510248 by Thibaud CANALE.

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> mpc-1.0.1.ebuild,
  mpc-1.0.2.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*mpc-1.0.2 (25 Jan 2014)

  25 Jan 2014; Ryan Hill <dirtyepic@gentoo.org> -mpc-0.8.2.ebuild,
  -mpc-0.9-r1.ebuild, -mpc-1.0.ebuild, +mpc-1.0.2.ebuild:
  Version bump, remove old.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> mpc-1.0.1.ebuild:
  Add arm64 love.

  21 Oct 2013; Fabian Groffen <grobian@gentoo.org> mpc-1.0.1.ebuild:
  Marked ~x64-macos, bug #486818

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> mpc-1.0.1.ebuild:
  Stable for sh, wrt bug #441194

  25 Feb 2013; Jeroen Roovers <jer@gentoo.org> mpc-1.0.1.ebuild:
  Stable for HPPA (bug #441194).

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> mpc-1.0.1.ebuild:
  Stable for sparc, wrt bug #441194
