@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/mpfr
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpfr/ChangeLog,v 1.185 2014/11/01 07:24:34 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpfr/ChangeLog,v 1.186 2015/05/15 17:31:24 zlogene Exp $
+
+  15 May 2015; Mikle Kolyada <zlogene@gentoo.org> mpfr-3.1.2_p10.ebuild:
+  amd64 stable wrt bug #549520
 
 *mpfr-3.1.2_p10 (01 Nov 2014)
 
