@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/mpc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpc/ChangeLog,v 1.59 2015/05/11 19:36:46 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpc/ChangeLog,v 1.60 2015/05/15 17:34:39 zlogene Exp $
+
+  15 May 2015; Mikle Kolyada <zlogene@gentoo.org> mpc-1.0.2-r1.ebuild:
+  amd64 stable wrt bug #531742
 
   11 May 2015; Mikle Kolyada <zlogene@gentoo.org> mpc-1.0.2-r1.ebuild:
   sparc stable wrt bug #531742
